--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="carousel">
         <div class="list">
-            <div class="item">
+            <div class="item active">
                 <img src="images/Royal_Capital_cathedral_interior_EP1.webp" alt="">
                 <div class="content">
                     <div class="title">Royal Capital</div>
@@ -57,6 +57,7 @@
                     <div class="topic">Hero Party statue</div>
                     <div class="des"></div>
                 </div>
+            </div>
                 <div class="item">
                 <img src="images/Royal_Capital_palace_interior_EP1.webp" alt="">
                 <div class="content">
@@ -64,7 +65,77 @@
                     <div class="topic">palace interior</div>
                     <div class="des"></div>
                 </div>
+                 </div>
+
+                 
+        </div>
+         <!--thumbnail-->
+                <div class="thumbnail">
+                    <div class="item">
+                        <img src="images/Royal_Capital_cathedral_interior_EP1.webp">
+                        <div class="content">
+                            <div class="title">
+                                Royal Capital
+                            </div>
+                            <div class="des">
+                                cathedral interior
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/Royal_Capital_EP1.webp">
+                        <div class="content">
+                            <div class="title">
+                                Royal Capital
+                            </div>
+                            <div class="des">
+                                palace external
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/Royal_Capital_Era_Meteors_outlook_EP1.webp">
+                        <div class="content">
+                            <div class="title">
+                                Royal Capital
+                            </div>
+                            <div class="des">
+                                Era Meteors outlook
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/Royal_Capital_Hero_Party_statue_EP1.webp">
+                        <div class="content">
+                            <div class="title">
+                                Royal Capital
+                            </div>
+                            <div class="des">
+                                Hero Party statue
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/Royal_Capital_palace_interior_EP1.webp">
+                        <div class="content">
+                            <div class="title">
+                                Royal Capital
+                            </div>
+                            <div class="des">
+                                palace interior
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
     </div>
+
+   
+                <div class="arrows">
+                    <button id="prev"><</button>
+                    <button id="next">></button>
+                </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
     <script src="script.js"></script>
